# calculator-app

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt
build-tidy/: CMakeCache.txt  Makefile  cmake_install.cmake
src/: main.cpp
